--- a/customermain.css
+++ b/customermain.css
@@ -198,6 +198,10 @@ body {
     padding:20px;
   }
 
+  #categorydiv div:hover{
+    background-color: rgb(248, 228, 235);
+  }
+
   #fooddiv{
     display: flex;
     flex-direction: row;
